syntax = "proto3";
package med8r.schemas.samples.fileservice.v1;

import "google/protobuf/descriptor.proto";
import "gproto/v1/gproto.proto";

service FileAPI {
  rpc GetJson(GetJsonRequest) returns (GetJsonResponse) {
    option (med8r.schemas.gproto.v1.endpoint_config) = {
        handlers: [
          {name:"file-backend",  options: [{key:"filename",value:"filename"}]}
        ],
    };
  }
  
  rpc UnsupportedHandler(GetJsonRequest) returns (GetJsonResponse) {
    option (med8r.schemas.gproto.v1.endpoint_config) = {
        handlers: [
          {name:"unsupported",  options: [{key:"something",value:"something"}]}
        ],
    };
  }
}

message GetJsonRequest {
  string filename = 1;
}

message GetJsonResponse {
  repeated stats data = 1;
}

message stats {
    string Year = 1;
}